--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="topic_sexuality">Sexualidad</string>
     <string name="topic_discipline">Disciplina</string>
     <string name="topic_social_problems">Problemas Sociales</string>
+
+    <string name="message_intereses">Queremos brindarte mejor información, escoge los temas que te interesen</string>
 </resources>
