--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="btn_enter">Entrar</string>
     <string name="btn_register">Registrarse</string>
     <string name="btn_aceptar">Aceptar</string>
+    <string name="btn_aceptar_dialog">Aceptar</string>
     <string name="btn_entrar_gmail">Iniciar con Gmail</string>
     <string name="btn_ask">Haz una pregunta</string>
     <string name="btn_answer">Responder</string>
