Implementacion del componente buscar primera parte
Tambien se ajusto el listado de preguntas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="topic_social_problems">Problemas Sociales</string>
 
     <string name="message_intereses">Queremos brindarte mejor información, escoge los temas que te interesen</string>
+    <string name="action_buscar">buscar</string>
 </resources>
