--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
 
     <string name="message_intereses">Queremos brindarte mejor información, escoge los temas que te interesen</string>
     <string name="action_buscar">buscar</string>
+    <string name="search_hint">Buscar texto</string>
+    <string name="description_user">Ser un buen padre es ser amigo de tus hijos y no una autoridad</string>
 </resources>
