--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="btn_enter">Entrar</string>
     <string name="btn_register">Registrarse</string>
     <string name="btn_aceptar">Aceptar</string>
+    <string name="btn_cancelar">Cancelar</string>
     <string name="btn_aceptar_dialog">Aceptar</string>
     <string name="btn_entrar_facebook">Iniciar con Facebook</string>
     <string name="btn_ask">Haz una pregunta</string>
@@ -22,8 +23,9 @@
     <string name="topic_social_problems">Problemas Sociales</string>
 
     <string name="message_intereses">Queremos brindarte mejor información, escoge los temas que te interesen</string>
+    <string name="message_suggest_publication">Está seguro que desea sugerir esta respuesta como publicación</string>
     <string name="action_buscar">buscar</string>
-    <string name="search_hint">Buscar texto</string>
+    <string name="search_hint">Ingresa algún tema que desees buscar..</string>
     <string name="description_user">Ser un buen padre es ser amigo de tus hijos y no una autoridad...</string>
 
 </resources>
