--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,11 @@
     <string name="txt_categories">Categorías</string>
     <string name="txt_answers">Respuestas</string>
     <string name="txt_write_question">Escribe aquí tu pregunta...</string>
+    <string name="txt_write_answer">Escribe aquí tu respuesta...</string>
+    <string name="txt_questions">Preguntas</string>
+    <string name="txt_posts">Publicaciones</string>
+    <string name="txt_likes">Me gusta</string>
+
 
     <string name="topic_health">Salud</string>
     <string name="topic_education">Educación</string>
