--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,7 @@
     <string name="seguro_sugerir_post">Desea sugerir que esta respuesta sea publicada? </string>
     <string name="mensaje_sugerir_post">Las respuestas sugeridas son almacenadas en la sección de Publicaciones para que los padres puedan acceder a soluciones facilmente. </string>
 
+    <string name="menu_categories">Ver Categorías</string>
+    <string name="menu_preferences">Preferencias</string>
+    <string name="menu_get_out">Cerrar Sesión</string>
 </resources>
