--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="txt_write_post">Escribe aquí tu experiencia o cualquier publicación que desees realizar</string>
     <string name="seguro_sugerir_post">Desea sugerir que esta respuesta sea publicada? </string>
     <string name="seguro_sugerir_a">Desea sugerir a</string>
-    <string name="mensaje_sugerir_post">Recuerde que las respuestas publicadas se mostrarán en la sección de Publicaciones, para que los padres puedan encontrar contenido válido y soluciones facilmente. </string>
+    <string name="mensaje_sugerir_post">Recuerde que las respuestas publicadas se mostrarán en la sección de Publicaciones, para que los padres puedan encontrar contenido válido y soluciones fácilmente. </string>
 
     <string name="menu_categories">Ver Categorías</string>
     <string name="menu_preferences">Preferencias</string>
